--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "descript": "Prove of concept for fully javascript project",
   "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node service.js"
   },
   "dependencies": {
     "ejs": "2.3.3",
@@ -25,7 +25,12 @@
   "license": "MIT",
   "devDependencies": {
     "angular": "^1.5.3",
+    "angular-ui-bootstrap": "^1.3.2",
     "angular-ui-router": "^0.2.18",
-    "express": "^4.13.3"
+    "bootstrap-sass": "^3.3.6",
+    "del": "^2.2.0",
+    "express": "^4.13.3",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.2.0"
   }
 }
