--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
     "angular-ui-bootstrap": "^1.3.2",
     "angular-ui-router": "^0.2.18",
     "bootstrap-sass": "^3.3.6",
-    "del": "^2.2.0"
+    "del": "^2.2.0",
+    "express": "^4.13.3",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3"
   }
 }
