--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "jquery": "^2.2.3",
+    "jquery-validation": "^1.15.0"
   }
 }
