--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node service.js"
   },
   "dependencies": {
-    "ejs": "2.3.3",
-    "express": "4.13.3"
+    "ejs": "^2.6.2",
+    "express": "4.13.3",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.12.0"
   },
   "engines": {
     "node": "0.12.7"
@@ -30,7 +32,6 @@
     "bootstrap-sass": "^3.3.6",
     "del": "^2.2.0",
     "express": "^4.13.3",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^2.2.0"
+    "gulp": "^3.9.1"
   }
 }
