--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "ejs": "^2.6.2",
     "express": "4.13.3",
+    "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.12.0"
   },
@@ -31,7 +32,6 @@
     "angular-ui-router": "^0.2.18",
     "bootstrap-sass": "^3.3.6",
     "del": "^2.2.0",
-    "express": "^4.13.3",
-    "gulp": "^3.9.1"
+    "express": "^4.13.3"
   }
 }
