--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "ejs": "^2.6.2",
-    "express": "4.13.3",
+    "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.12.0"
@@ -31,7 +31,6 @@
     "angular-ui-bootstrap": "^1.3.2",
     "angular-ui-router": "^0.2.18",
     "bootstrap-sass": "^3.3.6",
-    "del": "^2.2.0",
-    "express": "^4.13.3"
+    "del": "^2.2.0"
   }
 }
