--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node service.js"
   },
   "dependencies": {
+    "debug": "^4.1.1",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
