--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "jsIdea",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "descript": "Prove of concept for fully javascript project",
   "main": "app.js",
   "scripts": {
+    "build": "gulp dev",
     "start": "node service.js"
   },
   "dependencies": {
     "debug": "^4.1.1",
     "ejs": "^2.6.2",
-    "express": "^4.17.1",
-    "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2",
-    "node-sass": "^4.13.1"
+    "express": "^4.17.1"
   },
   "engines": {
     "node": "0.12.7"
@@ -31,15 +29,16 @@
     "angular": "^1.8.0",
     "angular-ui-bootstrap": "^1.3.2",
     "angular-ui-router": "^0.2.18",
-    "bootstrap-sass": "^3.3.6",
+    "bootstrap-sass": "^3.4.1",
     "del": "^2.2.0",
     "express": "^4.13.3",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
+    "gulp-sass": "^5.0.0",
     "gulp-uglify": "^1.5.3",
     "jquery": "^2.2.3",
-    "jquery-validation": "^1.15.0"
+    "jquery-validation": "^1.15.0",
+    "node-sass": "^4.13.1"
   }
 }
